# sentinel

./: .env.example  .gitignore  OVERVIEW.md  README.md  render.yaml
backend/: pyproject.toml
backend/app/: cache.py  ch_queries.sql  clients.py  config.py  notify.py  publish.py  schemas.py  scoring.py  sentinel.py  server.py  telemetry.py
backend/app/pipeline/: advise.py  extract.py  honest_ad.py  hunt.py  ingest.py  judge.py  orchestrator.py  red_flag.py
backend/data/: golden_claims.json
backend/data/vendors/: ai_sdrs.json  ai_support_agents.json
backend/scripts/: ch_backfill.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  GlassCard.tsx  SentinelLogo.tsx  StatusStrip.tsx
sponsor/: tools.md
