[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel — Autonomous burden of proof for the agentic web. Reuses the Receipts cost-aware inference cascade."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "httpx",
    "trafilatura",
    "openai",
    "anthropic",
    "tavily-python",
    "pydantic",
    "pydantic-settings",
    "tenacity",
    "python-dotenv",
    "orjson",
]

[tool.uv]
package = false
